Updated About section

--- a/src/index.html
+++ b/src/index.html
@@ -17,7 +17,7 @@
     <img id=logo src="https://jovian-py.readthedocs.io/en/latest/_images/jovian_horizontal_logo.svg" alt=None>
   </div>
   <img id="banner" src="Banner.jpg" alt="None">
-  <h1>About Jovian</h1>
+  <h1>Welcome to Jovian</h1>
   <div id="about">
     <div id="content">
       <p> Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ad, incidunt enim aliquid dolore expedita quasi unde
@@ -68,12 +68,6 @@
       </tr>
 
 
-
-      <!-- <th>Salary (Per Annum)
-        </th>
-        <th>Posted On
-        </th>
-      </tr> -->
 
       <tr id = "nested_location">
       <th>City
