--- a/src/index.html
+++ b/src/index.html
@@ -26,7 +26,7 @@
         eveniet est, impedit officiis aliquam distinctio explicabo ut beatae quo totam quia? Explicabo, eaque
         repellendus.
       </p>
-      <p>We also offer 2 industry focussed bootcamps
+      <p>We offer 2 industry focussed bootcamps
       <ol>
         <li>
           <a href="https://jovian.com/learn/programming-with-javascript-and-node-js" target="_blank">
